# atm-sim

./: .env  .env.dev.example  .env.prod.example  .env.tauri.example  .gitignore  Cargo.toml  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  package.json  tsconfig.json  vite.config.ts
app/isolation/: index.js
app/src/: globals.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  schema.rs
app/src/utils/: theme.ts
app/src/views/: CreateAccountView.vue  HomeView.vue  LoginView.vue
backend/: Cargo.toml  Dockerfile  Dockerfile.migrations  build.rs
backend/src/: lib.rs  main.rs  schema.rs
certs/: pg_hba.conf
scripts/: create-db-certs.bat  create-db-certs.sh
shared/src/: lib.rs
src/: App.vue  globals.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/utils/: theme.ts
src/views/: CreateAccountView.vue  HomeView.vue
